test to solve problems on mobile animation

--- a/_sass/themes/_style.scss
+++ b/_sass/themes/_style.scss
@@ -47,6 +47,26 @@ a{
   }
 }
 
+.no-animate-mobile {
+  @include breakpoint($mobile){
+    /*CSS transitions*/
+    -moz-transition-property: none !important;
+    -ms-transition-property: none !important;
+    -webkit-transition-property: none !important;
+    transition-property: none !important;
+    /*CSS transforms*/
+    -moz-transform: none !important;
+    -ms-transform: none !important;
+    -webkit-transform: none !important;
+    transform: none !important;
+    /*CSS animations*/
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important;
+  }
+}
+
 /**============================================================
    header style
   ============================================================= */
@@ -69,6 +89,9 @@ a{
         color: $sitecol-2;
         transition: all 500ms ease;
         opacity: 0;
+        @include breakpoint($mobile){
+          visibility: hidden;
+        }
       }
       &::before {
         content: "[ ";
